Выполнено задание спринта 7: - реализован класс FileBackedTaskManager с возможностью сохранения и считывания задач из файла (наседник от InMemoryTaskManager); - реализован утилитарный класс TaskConverter для преобразования задачи в строку для сохранения; - добавлены тесты для новых классов; - работа с подзадачами в эпиках переделана на Id; - добавлены выбросы исключений в случае, если задачи не найдены в менеджере; - для задач добавлены методы получения типа задачи, сравнения по всем полям, и получения id эпика; - исправлены тесты для новой логики.